# template-devcont

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: .dockerignore  .env.example  Dockerfile  README.md  configure-ai-proxy.sh  devcontainer.json  init-firewall.sh  js-pm
scripts/: generate-prod-dockerfile.sh
